--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,7 @@
   path = builder/clients/python
   url  = https://github.com/skylerknecht/messenger-client-python.git
   branch = main
+
+[submodule "builder/clients/nodejs"]
+	path = builder/clients/nodejs
+	url = https://github.com/skylerknecht/messenger-client-nodejs
